--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
+		<link rel="icon" type="favicon.ico" href="images/favicon.ico">
 
 		<!-- javascript -->
 		<script src="/js/jquery.js"></script>
